--- a/src/components/ScheduleItem/ScheduleItem.sass
+++ b/src/components/ScheduleItem/ScheduleItem.sass
@@ -35,3 +35,12 @@
 
 .schedule__item-time
   @include textBold-16
+
+
+@media screen and (max-width: 999px)
+  .scedule__item
+    width: calc(100%/2 - 70px)
+
+@media screen and (max-width: 560px)
+.scedule__item
+  width: 100%
