--- a/src/pages/AllCards/AllCards.sass
+++ b/src/pages/AllCards/AllCards.sass
@@ -36,4 +36,8 @@
 @media screen and (max-width: 862px)
     .allCards__content
         padding: 0 10px 64px
-        justify-content: center
+
+@media screen and (max-width: 780px)
+    .allCards__content
+      flex-direction: column
+      align-items: center
