--- a/src/components/Capcha/Captcha.sass
+++ b/src/components/Capcha/Captcha.sass
@@ -42,6 +42,9 @@
   border-radius: 10px
   text-align: center
 
+.captcha__input_captcha_ok
+  color: green
+
 .captcha__input::-webkit-input-placeholder
   text-align: center
 
