--- a/src/components/Slider/Slider.sass
+++ b/src/components/Slider/Slider.sass
@@ -60,3 +60,7 @@
   width: 100%
   height: 100%
   object-fit: cover
+
+@media screen and (min-width: 1550px)
+  .slider__single-img
+    padding: 0 10%
