--- a/src/pages/SinglePage/SinglePage.sass
+++ b/src/pages/SinglePage/SinglePage.sass
@@ -35,7 +35,7 @@
   color: #FF3744
   max-width: 715px
   overflow: hidden
-  white-space: nowrap
+  // white-space: nowrap
   text-overflow: ellipsis
 
 .singlePage__image-container
