Server response modal were added

--- a/src/pages/AddReview/AddReview.sass
+++ b/src/pages/AddReview/AddReview.sass
@@ -37,6 +37,7 @@
 .add-review__form-lable
   display: flex
   flex-direction: column
+  position: relative
 
 .add-review__input-name
   background: #FFFFFF
@@ -95,6 +96,19 @@
 .add-review__error-text_hidden
   visibility: hidden
   font-size: 12px
+
+.add-review__symbols-counter
+  font-size: 12px
+  margin-left: auto
+
+.add-review__err-and-counter
+  display: flex
+
+.add-review__count
+  color: black
+
+.add-review__count_type_wrong
+  color: rgba(255, 55, 68, 1)
 
 @media screen and (max-width: 635px)
   .add-review
