--- a/src/components/ImageMasked/ImageMasked.sass
+++ b/src/components/ImageMasked/ImageMasked.sass
@@ -1,8 +1,9 @@
 .image-masked__container
   overflow: hidden
+  max-height: 375px
+  max-width: 408px
   width: 100%
-  height: 375px
-  max-width: 403px
+  height: 100%
 
 .image-masked__img
   width: 100%
