Style popup fixed

--- a/src/components/ResponsePopup/ResponsePopup.sass
+++ b/src/components/ResponsePopup/ResponsePopup.sass
@@ -1,7 +1,7 @@
 @import "../../styles/@mixins.sass"
 
 .response
-  position: absolute
+  position: fixed
   width: 100vw
   height: 100vh
   background: rgba(111, 111, 111, 0.8)
