search and styles fix

--- a/src/components/Pagination/Pagination.sass
+++ b/src/components/Pagination/Pagination.sass
@@ -5,8 +5,8 @@
 .pagination__nav
   display: flex
   justify-content: center
-
   flex-direction: column
+  padding-top: 40px
 
 .pagination__page-conntainer
   display: flex
