--- a/src/pages/AllCards/AllCards.sass
+++ b/src/pages/AllCards/AllCards.sass
@@ -13,7 +13,8 @@
     padding-bottom: 79px
     margin: 0 auto
     row-gap: 92px
-    padding: 0 40px 64px
+    padding: 0 40px 0
+    margin-bottom: 60px
 
 .allCards-card
     max-width: 383px
