--- a/src/components/Search/Search.sass
+++ b/src/components/Search/Search.sass
@@ -9,6 +9,20 @@
   display: flex
   margin: 0 20px
 
+.search__clear-button
+  -webkit-mask-image: url('../../assets/images/cancel-icon.svg')
+  width: 24px
+  height: 24px
+  border: none
+  background-color: transparent
+  border: none
+  margin: 0
+  cursor: pointer
+  background-color: #6F6F6F
+  position: absolute
+  top: 9px
+  right: 38px
+
 .search__button
   position: absolute
   right: 8px
@@ -28,7 +42,7 @@
   height: 40px
   padding-left: 10px
   outline: none
-
+  max-width: 60%
 .search__form
   border: 1px solid red
   border-radius: 30px
@@ -44,3 +58,10 @@
     position: relative
     width: 220px
     margin: 20px auto 0
+
+  .search__input
+    max-width: 75%
+
+  .search__clear-button
+    top: 9px
+    right: 50px
