addreview button removed from pagination

--- a/src/pages/AllCards/AllCards.sass
+++ b/src/pages/AllCards/AllCards.sass
@@ -3,6 +3,9 @@
 
 .allCards
     width: 100%
+    justify-content: center
+    display: flex
+    flex-direction: column
 
 .allCards__content
     justify-content: space-between
@@ -40,5 +43,5 @@
 
 @media screen and (max-width: 780px)
     .allCards__content
-      flex-direction: column
-      align-items: center
+        flex-direction: column
+        align-items: center
