--- a/src/pages/AllCards/AllCards.sass
+++ b/src/pages/AllCards/AllCards.sass
@@ -41,12 +41,10 @@
 @media screen and (max-width: 999px)
     .allCards__title
         font-size: 30px
+        padding: 0 20px 64px
 
-@media screen and (max-width: 862px)
+@media screen and (max-width: 880px)
     .allCards__content
-        padding: 0 10px 64px
-
-@media screen and (max-width: 780px)
-    .allCards__content
+        padding: 0 10px 0
         flex-direction: column
         align-items: center
