error span height

--- a/src/components/Form/Form.sass
+++ b/src/components/Form/Form.sass
@@ -130,6 +130,8 @@
   background: rgba(211, 29, 41, 1)
 
 .form__error-text
+  display: block
+  height: 5px
   color: rgba(255, 55, 68, 1)
   font-size: 12px
 
